fix: fixed options alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,7 @@ body {
   background-color: rgb(226, 226, 226);
 }
 
-header,
-footer {
+header , footer {
   background-color: rgb(50, 167, 145);
   width: 100vw;
   height: 8vh;
@@ -52,12 +51,7 @@ footer {
   height: 7vh;
 }
 
-#emailForm,
-#passwordForm,
-#input-name,
-#input-lastname,
-#input-email,
-#house {
+#emailForm , #passwordForm , #input-name , #input-lastname , #input-email , #house {
   border-radius: 10px;
   border-style: inset;
   text-align: center;
@@ -67,13 +61,11 @@ footer {
   margin: 0.3vh;
 }
 
-#emailForm,
-#passwordForm {
+#emailForm , #passwordForm {
   width: 150px;
 }
 
-#emailForm:hover,
-#passwordForm:hover {
+#emailForm:hover , #passwordForm:hover {
   border-radius: 10px;
   border-style: ridge;
   box-shadow: 1px 1px 5px rgb(247, 151, 7);
@@ -158,8 +150,7 @@ hr {
   justify-content: center;
 }
 
-#family,
-#learn {
+#family , #learn {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -239,8 +230,7 @@ hr {
   margin-bottom: 0.5vh;
 }
 
-#check,
-#formButtons {
+#check , #formButtons {
   display: flex;
   width: 600px;
   align-items: center;
@@ -251,9 +241,7 @@ hr {
   margin-left: 1vh;
 }
 
-#input-name,
-#input-lastname,
-#input-email {
+#input-name , #input-lastname , #input-email {
   width: 300px;
   height: 25px;
 }
